syntax = "proto3";


option java_multiple_files = true;
option java_outer_classname = "MyPetGrpcApi";

package me.naiden.mypet.grpc.model;

message PetProject {
    string name = 1;
    string description = 2;
    string shortDescription = 3;
    string task = 4;
    string tests = 5;
//    repeated string tests = 5;
}

message GetPetProjects {
    int32 limit = 1;
}

service PetProjectService {
    rpc GetPetProjectsList (GetPetProjects) returns (stream PetProject) {}
}
